<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>send_to_dock</name>
  <version>0.0.0</version>
  <description>Package to share service server, wait for request to dock a robot and execute action to dock robot with specified parameters.</description>

  <maintainer email="support@husarion.com">Husarion</maintainer>
  <license>Apache-2.0</license>

  <author email="zuzanna.mejer@husarion.com">Zuzanna Mejer</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>nav2_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
